# looping-box

./: .env.example  .gitignore  CHANGELOG.md  README.md  REVIEW.md  ROADMAP.md  demo-1.sh  demo-2.sh  demo-3.sh  pyproject.toml  startday.sh
config/: action_classes.json  super_loop.json
config/sops/: phase1_ingestion.json  phase1_ingestion.md
config/workers/: context_builder.json  execution_engine.json
docs/: 20260707.md  DEMOS.md  RECOVERY.md  sales-demos.md
docs/contracts/: worker_output.example.json
docs/schemas/: action_classes.schema.json  pending_review_index.schema.json  phase1_delta.schema.json  review_payload.schema.json  review_record.schema.json  verifier_result.schema.json  worker_output.schema.json  world_state.schema.json
src/looping_box/: __init__.py  _util.py  action_policy.py  model.py  phase1.py  review.py  schema.py  supervisor.py  worker.py
tests/: test_model.py  test_phase1.py  test_review.py  test_schema.py  test_supervisor.py  test_worker.py  test_worker_contracts.py
